# Crewai_Prompt_Chaining

./: README.md  fun_fact.md  latest_news.md  pyproject.toml  travel_guide.md
src/: .env
src/pr7/: main.py  main1.py  main2.py  main3.py
