[project]
name = "pr7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nousheen-Adeel", email = "nousheenfatimaadeel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
pr7 = "pr7:main"
piaic="pr7.main:kickoff"
chain_prompt="pr7.main1:kickoff"
chain_prompt2="pr7.main2:kickoff"
chain_prompt3="pr7.main3:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
